--- a/forum.html
+++ b/forum.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="forum.css">
     <title>[LATAM] Luxury RP</title>
     <link rel="icon" href="img/luxury_logo.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css" integrity="sha384-fZCoUih8XsaUZnNDOiLqnby1tMJ0sE7oBbNk2Xxf5x8Z4SvNQ9j83vFMa/erbVrV" crossorigin="anonymous"/>
@@ -37,13 +37,11 @@
             <div class="bar" ></div>
           </div>
           <ul>
-            <li><a href="#hero" data-after="Home" class="activo">INICIO</a></li>
-            <li><a href="#about" data-after="About">SOBRE NOSOTROS</a></li>
-            <li><a href="#projects" data-after="Projects">NORMATIVAS</a></li>
+            <li><a href="./index.html" data-after="Home" >INICIO</a></li>
             <li><a href="./vips.html"  data-after="Service">TIENDA</a></li>
-            <li><a href="./forum.html" data-after="Contact">CONTACTO</a></li>
-            <li><a href="./log.html" data-after = "Log">Acceso</a></li>
-            <li><a href="https://cfx.re/join/dkqge3" target="_blank" data-after = "Play" class="cta3" >Jugar</a></li> 
+            <li><a href="./forum.html" data-after="Contact" class="activo" >CONTACTO</a></li>
+            <li><a href="./log.html" data-after = "Log" >Acceso</a></li>
+            <li><a href="https://cfx.re/join/dkqge3" target="_blank" data-after = "Play" class="cta3" >Jugar</a></li>
             
           </ul>
         </div>
@@ -64,16 +62,25 @@
   <section id="hero">
     <div class="hero container">
       <div>
-        <h1>El mejor <span></span></h1>
-        <h1>servidor<span></span></h1>
-        <h1>para el mejor.<span></span></h1>
-        <a href="https://discord.gg/9tdjhb75"  target="_blank" type="button" class="cta">Discord </a>
+        <h1>Envia un correo al equipo de staff <span></span></h1>
+<!--         <h1>servidor<span></span></h1>
+        <h1>para el mejor.<span></span></h1> -->
+        <!-- <a href="https://discord.gg/9tdjhb75"  target="_blank" type="button" class="cta">Discord </a> -->
 
       </div>
     </div>
   </section>
   
 
+<!--   <div id="discord">
+    <div class="discord container">
+      <div>
+        <a href="https://discord.gg/9tdjhb75"  target="_blank" type="button" class="cta4">Sobre Nosotros </a>
+      </div>
+    </div>
+  </div> -->
+
+  
   
   
   <!-- Projects Section -->
@@ -201,6 +208,7 @@
           </div>
       <div class="col-right" >
         <h1 class="section-title">About <span>me</span></h1>
+        
         <h2>Front End Developer</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque
           repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt
@@ -213,11 +221,13 @@
   </section>
   <!-- End About Section -->
 
+  
+
   <!-- Contact Section -->
-  <!-- <section id="contact">
+  <section id="contact">
     <div class="contact container">
       <div class="navbar3">
-        <div>
+        <!-- <div>
           <h1 class="section-title">Contact <span>info</span></h1>
         </div>
         <div class="navbar2">
@@ -244,11 +254,23 @@
             <h1>Address</h1>
             <h2>Fatikchhari, Chittagong, Bangladesh</h2>
           </div>
-        </div>
+        </div> -->
+<!--         <form action="/form-handler.php">
+          <fieldset>
+            <legend>Información personal:</legend>
+            Nombre:<br>
+            <input type="text" name="firstname"><br>
+            Apellido:<br>
+            <input type="text" name="lastname"><br><br>
+            <input type="submit" value="Enviar">
+          </fieldset>
+        </form> -->
       </div>
     </div>
-  </section> -->
+  </section>
+  
   <!-- End Contact Section -->
+
   
   
 <style>
@@ -461,7 +483,7 @@
   
   <!-- End Footer -->
   <script src="https://unpkg.com/scrollreveal"></script>
-  <script src="./app.js"></script>
+  <script src="./forum.js"></script>
   <script>
     let lista = document.querySelectorAll('.lista');
     for(let i=0; i<lista.length; i++){
