--- a/forum.html
+++ b/forum.html
@@ -197,7 +197,7 @@
       <!-- End Service Section -->
       
       <!-- About Section -->
-      <section id="about">
+<!--       <section id="about">
         <div class="navbar4">
         <div class="about container" >
           <div class="col-left" >
@@ -218,16 +218,16 @@
         <a href="#" class="cta">Download Resume</a>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End About Section -->
 
   
 
   <!-- Contact Section -->
-  <section id="contact">
+<!--   <section id="contact">
     <div class="contact container">
       <div class="navbar3">
-        <!-- <div>
+        <div>
           <h1 class="section-title">Contact <span>info</span></h1>
         </div>
         <div class="navbar2">
@@ -254,20 +254,87 @@
             <h1>Address</h1>
             <h2>Fatikchhari, Chittagong, Bangladesh</h2>
           </div>
-        </div> -->
-<!--         <form action="/form-handler.php">
-          <fieldset>
-            <legend>Información personal:</legend>
-            Nombre:<br>
-            <input type="text" name="firstname"><br>
-            Apellido:<br>
-            <input type="text" name="lastname"><br><br>
-            <input type="submit" value="Enviar">
-          </fieldset>
-        </form> -->
+        </div>
       </div>
     </div>
-  </section>
+  </section> -->
+
+  <div class="container">
+    <span class="big-circle"></span>
+    <img src="img/shape.png" class="square" alt="" action="https://discord.com/api/webhooks/985010984953475124/rJvwfT9NoN5lKlfj1B9KnXfHAW85thYBHrHi6Wjhag3WXKDAT7D0JwTwSPdwaIUl-_wX"/>
+    <div class="form">
+      <div class="contact-info">
+        <h3 class="title">Let's get in touch</h3>
+        <p class="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+          dolorum adipisci recusandae praesentium dicta!
+        </p>
+
+        <div class="info">
+          <div class="information">
+            <img src="img/location.png" class="icon" alt="" />
+            <p>92 Cherry Drive Uniondale, NY 11553</p>
+          </div>
+          <div class="information">
+            <img src="img/email.png" class="icon" alt="" />
+            <p>lorem@ipsum.com</p>
+          </div>
+          <div class="information">
+            <img src="img/phone.png" class="icon" alt="" />
+            <p>123-456-789</p>
+          </div>
+        </div>
+
+        <div class="social-media">
+          <p>Connect with us :</p>
+          <div class="social-icons">
+            <a href="#">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="contact-form">
+        <span class="circle one"></span>
+        <span class="circle two"></span>
+
+        <form action="https://discord.com/api/webhooks/985010984953475124/rJvwfT9NoN5lKlfj1B9KnXfHAW85thYBHrHi6Wjhag3WXKDAT7D0JwTwSPdwaIUl-_wX" autocomplete="off">
+          <h3 class="title">Contact us</h3>
+          <div class="input-container">
+            <input type="text" name="name" class="input" />
+            <label for="">Username</label>
+            <span>Username</span>
+          </div>
+          <div class="input-container">
+            <input type="email" name="email" class="input" />
+            <label for="">Email</label>
+            <span>Email</span>
+          </div>
+          <div class="input-container">
+            <input type="tel" name="phone" class="input" />
+            <label for="">Phone</label>
+            <span>Phone</span>
+          </div>
+          <div class="input-container textarea">
+            <textarea name="message" class="input"></textarea>
+            <label for="">Message</label>
+            <span>Message</span>
+          </div>
+          <input action="https://discord.com/api/webhooks/985010984953475124/rJvwfT9NoN5lKlfj1B9KnXfHAW85thYBHrHi6Wjhag3WXKDAT7D0JwTwSPdwaIUl-_wX" type="submit" value="Send" class="btn" />
+        </form>
+      </div>
+    </div>
+  </div>
   
   <!-- End Contact Section -->
 
