contactos y vip html

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <div class="col-left" >
             
             <div class="about-img" id="animacion3">
-              <img src="./img/img-2.png" alt="img">
+              <img src="./img/unknown.png" alt="img">
             </div>
           </div>
       <div class="col-right" >
@@ -249,6 +249,8 @@
     </div>
   </section> -->
   <!-- End Contact Section -->
+
+  
   
   
 <style>
