--- a/vips.html
+++ b/vips.html
@@ -278,7 +278,7 @@
   <!-- End About Section -->
 
   <!-- Contact Section -->
-  <section id="contact">
+  <!-- <section id="contact">
     <div class="contact container">
       <div class="navbar3">
       <div>
@@ -311,7 +311,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End Contact Section -->
   
   
