--- a/forum.html
+++ b/forum.html
@@ -306,7 +306,7 @@
       <div class="contact-form" onload="load()" >
 
 
-        <form  autocomplete="on" onsubmit="sendEmail(); reset(); return false;">
+        <form  autocomplete="on"  action="https://formsubmit.co/luxuryrparg@outlook.com" method="POST"><!-- onsubmit="sendEmail(); reset(); return false;" -->
           <h3 class="title">Contactarnos</h3>
           <div class="input-container">
             <input type="name" name="name" id="name" class="input" />
