--- a/forum.html
+++ b/forum.html
@@ -307,6 +307,7 @@
 
 
         <form  autocomplete="on"  action="https://formsubmit.co/luxuryrparg@outlook.com" method="POST"><!-- onsubmit="sendEmail(); reset(); return false;" -->
+          <input type="hidden" name="_next" value="https://en3r.github.io/luxuryrpweb/vips.html">
           <h3 class="title">Contactarnos</h3>
           <div class="input-container">
             <input type="name" name="name" id="name" class="input" />
