--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
           <ul>
             <li><a href="#hero" data-after="Home" class="activo">INICIO</a></li>
-            <li><a href="#about" data-after="About">SOBRE NOSOTROS</a></li>
+            <!-- <li><a href="#services" data-after="About">SOBRE NOSOTROS</a></li> -->
             <li><a href="#projects" data-after="Projects">NORMATIVAS</a></li>
             <li><a href="./vips.html"  data-after="Service">TIENDA</a></li>
             <li><a href="./forum.html" data-after="Contact">CONTACTO</a></li>
@@ -156,30 +156,29 @@
         <div class="services container">
           <div class="navbar">
           <div class="service-top" >
-            <h1 class="section-title">Tien<span>das</span></h1>
-            <p>Seleccione a la tienda que le gustaria dirigirse</p>
+            <h1 class="section-title">Sobre <span> nosotros</span></h1>
+            <p>Dejanos contar un poco de lo que tenemos</p>
           </div>
           <div class="service-bottom">
             <div class="service-item">
-              <div class="icon"><img src=./img/vip.png /></div>
+              <div class="icon"><img src=https://img.icons8.com/sf-ultralight/344/conference-background-selected.png /></div>
               <!-- <a href="./vips.html" class="cta3" >Vips</a> -->
-              <p>Aqui podra ver los precios y tipos de vips disponiblesㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
+              <p>Staff activo 24/7. <br> Es una normativa en las postulaciones.</p>
             </div>
             <div class="service-item">
-              <div class="icon"><img src=./img/icons8-shop-60.png /></div>
+              <div class="icon"><img src=https://img.icons8.com/ios/344/performance-macbook.png /></div>
               <!-- <a href="#about" class="cta3" >Vehiculos</a> -->
-              <p>Si entras aqui, podras ver una carta de vehiculos disponibles para comprar pre seleccionados por el equipo de staff y tambien 
-                podrá solicitar un vehiculo propio donde sera suyo unicamente (este mismo no se podra repetir)</p>
+              <p>Contamos con una optimización de punta a punta, para que puedas tener la mejor experiencia dentro de nuestro servidor!</p>
             </div>
             <div class="service-item">
-              <div class="icon"><img src=./img/vip.png /></div>
+              <div class="icon"><img src=https://img.icons8.com/dotty/344/rockstar-games.png /></div>
               <!-- <a href="#about" class="cta3" >Propiedades</a> -->
-              <p>Aqui podrá ver y adquirir propiedades propiedades pedidas en lugar exacto donde usted quiera y con el interior que más le guste de nuestro catalogoㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
+              <p>Ambiente vanilla, esto nos ayuda a mejorar los FPS y menos errores!</p>
             </div>
             <div class="service-item">
-              <div class="icon"><img src=./img/vip.png /></div>
+              <div class="icon"><img src=https://img.icons8.com/pastel-glyph/344/person-male--v2.png /></div>
               <!-- <a href="#about" class="cta3" >Extras</a> -->
-              <p>Aqui se podrá adquirir y ver los extras, un ejemplo es, dinero en juego, creditosㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</p>
+              <p>Llevamos el rol al nivel más serio que podamos, todo depende de nuestra comunidad. Ayudanos a mantener un rol serio</p>
             </div>
           </div>
         </div>
@@ -190,7 +189,7 @@
       <!-- End Service Section -->
       
       <!-- About Section -->
-      <section id="about">
+<!--       <section id="about">
         <div class="navbar4">
         <div class="about container" >
           <div class="col-left" >
@@ -210,7 +209,7 @@
         <a href="#" class="cta">Download Resume</a>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End About Section -->
 
   <!-- Contact Section -->
@@ -411,13 +410,13 @@
         </a>
       </li>
       <li class="lista" data-color="#05c46b">
-        <a href="#" target="_blank">
+        <a href="forum.html" target="_blank">
           <span class="icono"><i class="fa fa-comment"></i></span>
           <span class="titulo">Mensajes</span>
         </a>
       </li>
       <li class="lista" data-color="#0fbcf9">
-          <a href="luxuryrparg@outlook.com" target="_blank" id="photo" title="Contactarnos">
+          <a href="forum.html" target="_blank" id="photo" title="Contactarnos">
             <span class="icono"><i class="fa-solid fa-at fa-2xl"></i></span>
             <span class="titulo">Ayuda</span>
           </a>
