--- a/forum.html
+++ b/forum.html
@@ -38,7 +38,7 @@
           <ul>
             <li><a href="./index.html" data-after="Home" >INICIO</a></li>
             <li><a href="./vips.html"  data-after="Service">TIENDA</a></li>
-            <li><a href="#contact" data-after="Contact" class="activo" >CONTACTO</a></li>
+            <!-- <li><a href="#contact" data-after="Contact" class="activo" >CONTACTO</a></li> -->
             <li><a href="./log.html" data-after = "Log" >Acceso</a></li>
             <li><a href="https://cfx.re/join/dkqge3" target="_blank" data-after = "Play" class="cta3" >Jugar</a></li>
             
@@ -118,6 +118,7 @@
 
         <form  autocomplete="on"  action="https://formsubmit.co/luxuryrparg@outlook.com" method="POST"><!-- onsubmit="sendEmail(); reset(); return false;" -->
           <input type="hidden" name="_next" value="https://en3r.github.io/luxuryrpweb/index.html">
+          <input type="hidden" name="_webhook" value="https://discord.com/api/webhooks/985010984953475124/rJvwfT9NoN5lKlfj1B9KnXfHAW85thYBHrHi6Wjhag3WXKDAT7D0JwTwSPdwaIUl-_wX">
           <h3 class="title">Contactarnos</h3>
           <div class="input-container">
             <input type="name" name="name" id="name" class="input" />
@@ -310,13 +311,13 @@
         </a>
       </li>
       <li class="lista" data-color="#05c46b">
-        <a href="#" target="_blank">
+        <a href="forum.html" title="Contactarnos">
           <span class="icono"><i class="fa fa-comment"></i></span>
           <span class="titulo">Mensajes</span>
         </a>
       </li>
       <li class="lista" data-color="#0fbcf9">
-          <a href="luxuryrparg@outlook.com" target="_blank" id="photo" title="Contactarnos">
+          <a href="luxuryrparg@outlook.com" target="_blank" id="photo" >
             <span class="icono"><i class="fa-solid fa-at fa-2xl"></i></span>
             <span class="titulo">Ayuda</span>
           </a>
