--- a/log.html
+++ b/log.html
@@ -97,7 +97,7 @@
             <!-- <li><a href="#projects" data-after="Projects">NORMATIVAS</a></li> -->
             <li><a href="./vips.html"  data-after="Service">TIENDA</a></li>
             <!-- <li><a href="#about" data-after="About">SOBRE NOSOTROS</a></li> -->
-            <li><a href="./forum.html" data-after="Contact">CONTACTO</a></li>
+            <!-- <li><a href="./forum.html" data-after="Contact">CONTACTO</a></li> -->
             <li><a href="./log.html" data-after = "Log" class="activo" >Acceso</a></li>
             <li><a href="https://cfx.re/join/dkqge3" target="_blank" data-after = "Play" class="cta3"  >Jugar</a></li>
             
@@ -498,13 +498,13 @@
         </a>
       </li>
       <li class="lista" data-color="#05c46b">
-        <a href="#" target="_blank">
+        <a href="forum.html" title="Contactarnos">
           <span class="icono"><i class="fa fa-comment"></i></span>
           <span class="titulo">Mensajes</span>
         </a>
       </li>
       <li class="lista" data-color="#0fbcf9">
-          <a href="luxuryrparg@outlook.com" target="_blank" id="photo" title="Contactarnos">
+          <a href="luxuryrparg@outlook.com" target="_blank" id="photo" >
             <span class="icono"><i class="fa-solid fa-at fa-2xl"></i></span>
             <span class="titulo">Ayuda</span>
           </a>
