--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
       </li>
       <li class="lista" data-color="#05c46b">
         <a href="forum.html"  title="Contactarnos">
-          <span class="icono"><i class="fa fa-comment"></i></span>
+          <span class="icono"><i class="fas fa-file-signature fa-2xl"></i></span>
           <span class="titulo">Mensajes</span>
         </a>
       </li>
