--- a/log.html
+++ b/log.html
@@ -139,6 +139,10 @@
 					<input type="password" name="pswd" placeholder="Contraseña" required="">
 					<button>Registrarse</button>
 				</form>
+        <a href="init-openId.php" class="bg-steam-lightGray  text-xl px-5 py-3 rounded-md font-bold flex items-center space-x-4 hover:bg-gray-600 transition duration-75">
+          <i class="fa-brands fa-steam text-2xl"></i>
+          <span>Login with Steam</span>
+      </a>
 			</div>
 
 			<div class="login">
