--- a/vips.html
+++ b/vips.html
@@ -283,20 +283,20 @@
         </a>
       </li>
       <li class="lista" data-color="#05c46b">
-        <a href="forum.html" title="Contactarnos">
-          <span class="icono"><i class="fa fa-comment"></i></span>
+        <a href="forum.html"  title="Contactarnos" id="photo">
+          <span class="icono"><i class="fas fa-file-signature fa-2xl"></i></span>
           <span class="titulo">Mensajes</span>
         </a>
       </li>
       <li class="lista" data-color="#0fbcf9">
-          <a href="luxuryrparg@outlook.com" target="_blank" id="photo" >
-            <span class="icono"><i class="fa-solid fa-at fa-2xl"></i></span>
+          <a href="actualizaciones.html" id="photo" title="Actualizaciones">
+            <span class="icono"><i class="fa-solid fa-wrench fa-2xl fa-spin"></i></span>
             <span class="titulo">Ayuda</span>
           </a>
       </li>
       <li class="lista" data-color="#ffa801">
         <a href="#" target="_blank">
-          <span class="icono"><i class="fa fa-cog fa-spin"></i></span>
+          <span class="icono"><i class="fa fa-cog"></i></span>
           <span class="titulo">Configurar</span>
         </a>
       </li>
